ScriptableService: change PlaylistController hack to something more decent

...or at least move the hack out of a very generic class
(PlaylistController) to where it belongs, the ScriptableService. Fixes
tracks not being instantly playable on click bug and removes use of a
deprecated Playlist::makeLoadingSync() from PlaylistController.

BUGFIXES:
 * Radio streams from scripted services are now instantly playable.

BUG: 320718
FIXED-IN: 2.8