src/playlist/PlaylistController.cpp
@@ -603,20 +603,9 @@ Controller::insertionHelper( int bottomModelRow, Meta::TrackList& tl )
         i.next();
         Meta::TrackPtr track = i.value();
 
-        if ( track == Meta::TrackPtr() )
-        { /*ignore*/ }
-
-        else if( Playlists::canExpand( track ) )
+        if( !track )
         {
-            Playlists::PlaylistPtr playlist = Playlists::expand( track ); //expand() can return 0 if the KIO job times out
-            if( playlist )
-            {
-                playlist->makeLoadingSync();
-                playlist->triggerTrackLoad(); //playlist track loading is on demand.
-                //since this is a playlist masqueurading as a single track, make a MultiTrack out of it:
-                if ( playlist->tracks().count() > 0 )
-                    modifiedList << Meta::TrackPtr( new Meta::MultiTrack( playlist ) );
-            }
+            /*ignore*/
         }
         else if( typeid( *track.data() ) == typeid( MetaFile::Track  ) )
         {
